syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option csharp_namespace = "BookWorm.Basket.Grpc.Services";

package BasketApi;

service BasketGrpcService {
  rpc GetBasket (google.protobuf.Empty) returns (BasketResponse) {
    option (google.api.http) = {
      get: "/api/v1/basket"
    };
  };
}

message BasketResponse {
  string id = 1;
  repeated Item items = 2;
}

message Item {
  string id = 1;
  int32  quantity = 2;
}